--- a/library.html
+++ b/library.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PlayPlex</title>
-    <link rel="icon" type="image/x-icon" href="media/pp-logo.svg">
+    <link rel="icon" type="image/x-icon" href="media/logos/pp-logo-icon-dark.svg">
 
-    <link href="bootstrap.min.css" rel="stylesheet"
+    <link href="css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&family=Poppins:wght@400;700&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
