--- a/profile-library.html
+++ b/profile-library.html
@@ -6,13 +6,13 @@
     <title>PlayPlex</title>
     <link rel="icon" type="image/x-icon" href="media/pp-logo.svg">
 
-    <link href="bootstrap.min.css" rel="stylesheet"
+    <link href="css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&family=Poppins:wght@400;700&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -38,18 +38,42 @@
     </header>
 </div>
 
-<div class="container-fluid px-lg-5" >
-    <nav>
-        <a href="library.html" class="d-flex flex-column align-items-center link-body-emphasis text-decoration-none btn-lg icon-link">
-            <img class=" " height="70px" src="media/icons/line-md--compass-loop.svg" alt="Discover">
-            <p class="h2 fw-light">Discover</p>
-        </a>
-    </nav>
-    <main>
-        <h1 class="col-lg-6">Welcome to PlayPlex: Your Gateway to Infinite Adventures!</h1>
-    </main>
-</div>
+<div class="container-fluid bg-dark hero">
+    <div class="row">
+        <nav class="col-sm-3 flex-column">
+            <a href="library.html"
+               class="d-flex flex-column align-items-center justify-content-center link-body-emphasis text-decoration-none btn-lg icon-link bg-warning p-5 ">
+                <img class=" " height="70px" src="media/icons/line-md--compass-loop.svg" alt="Discover">
+                <p class="h2 fw-light">Discover</p>
+            </a>
+            <a href="library.html"
+               class="d-flex flex-column align-items-center justify-content-center link-body-emphasis text-decoration-none btn-lg icon-link bg-danger p-5">
+                <img class=" " height="70px" src="media/icons/line-md--grid-3-filled.svg" alt="Discover">
+                <p class="h2 fw-light">Filter</p>
+            </a>
+            <a href="library.html"
+               class="d-flex flex-column align-items-center justify-content-center link-body-emphasis text-decoration-none btn-lg icon-link bg-info p-5">
+                <img class=" " height="70px" src="media/icons/line-md--star-pulsating-loop.svg" alt="Discover">
+                <p class="h2 fw-light">Add to WishList</p>
+            </a>
 
+        </nav>
+        <div class="col-sm">
+            <main class="flex-column p-10">
+                <h1 class="h1 text-uppercase lh-md text-lg-start">Welcome to PlayPlex: Your Gateway to Infinite Adventures!</h1>
+            </main>
+        </div>
+    </div>
+</div>
+<div class="container-fluid bg-primary">
+    <p class="display-1">
+        Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to Play
+        Plex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite
+        Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex:
+        Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite
+        Adventures!
+    </p>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
