Update styles and structure across webpages
This commit reorganizes CSS styles into a new 'css' directory and improves the visual presentation of the profile-library.html. Bootstrap and custom stylesheets links in all HTML files have been updated accordingly. It further enhances readability by adjusting font sizes, and adds new navigation elements in profile-library.html to enhance user experience. Some minor changes made to SVG file for better visualization.

--- a/profile-library.html
+++ b/profile-library.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PlayPlex</title>
-    <link rel="icon" type="image/x-icon" href="media/pp-logo.svg">
+    <link rel="icon" type="image/x-icon" href="media/logos/pp-logo-icon-dark.svg">
 
     <link href="css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&family=Poppins:wght@400;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Anton&family=Archivo+Black&family=Comfortaa:wght@300..700&family=Fjalla+One&family=Lexend:wght@100..900&family=Madimi+One&family=Orbitron:wght@400..900&family=Titan+One&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -58,19 +58,25 @@
             </a>
 
         </nav>
-        <div class="col-sm">
-            <main class="flex-column p-10">
-                <h1 class="h1 text-uppercase lh-md text-lg-start">Welcome to PlayPlex: Your Gateway to Infinite Adventures!</h1>
+        <div class="col-sm ">
+            <main class="d-flex flex-column p-10  h-100 justify-content-center">
+                <h1 class="titan-one-regular h1 text-uppercase lh-md text-lg-start">Welcome to PlayPlex: Your Gateway to Infinite
+                    Adventures!</h1>
+<!--                <p class="display-4 flex-fill">Roll the dice!</p>-->
             </main>
         </div>
     </div>
 </div>
 <div class="container-fluid bg-primary">
     <p class="display-1">
-        Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to Play
-        Plex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite
-        Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex:
-        Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite
+        Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite
+        Adventures!Welcome to Play
+        Plex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to
+        PlayPlex: Your Gateway to Infinite
+        Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to
+        Infinite Adventures!Welcome to PlayPlex:
+        Your Gateway to Infinite Adventures!Welcome to PlayPlex: Your Gateway to Infinite Adventures!Welcome to
+        PlayPlex: Your Gateway to Infinite
         Adventures!
     </p>
 </div>
