--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jersey+10+Charted&family=Poppins:wght@400;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Anton&family=Archivo+Black&family=Comfortaa:wght@300..700&family=Fjalla+One&family=Lexend:wght@100..900&family=Madimi+One&family=Orbitron:wght@400..900&family=Titan+One&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
