--- a/account.html
+++ b/account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PlayPlex</title>
-    <link rel="icon" type="image/x-icon" href="media/pp-logo.svg">
+    <link rel="icon" type="image/x-icon" href="media/logos/pp-logo-icon-dark.svg">
 
     <link href="css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -14,46 +14,27 @@
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body   >
 
 <div class="container-fluid px-lg-5">
-
-    <header class="d-flex align-content-center justify-content-lg-between">
-
-        <div class="d-flex align-content-center justify-content-lg-between flex-fill">
-            <a href="index.html" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-                <img class=" " height="40px" src="media/icons/line-md--arrow-align-left.svg " alt="playplex">
+    <header class="row align-items-center justify-content-between gx-0">
+            <a href="login.html" class="col text-start link-body-emphasis text-decoration-none ">
+                <img class="d-flex " height="40px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
             </a>
 
-            <a href="profile-library.html" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-                <img class=" " height="64px" src="media/logos/pp-logo-dark.svg" alt="playplex">
+            <a href="profile-library.html" class="col text-center link-body-emphasis text-decoration-none">
+                <img class="" height="64px" src="media/logos/pp-logo-dark.svg" alt="PlayPlex">
             </a>
 
-            <a href="account.html" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-                <img class=" " height="40px" src="media/icons/line-md--account.svg" alt="playplex">
+            <a href="account.html" class="col text-end link-body-emphasis text-decoration-none">
+                <img class="" height="40px" src="media/icons/line-md--account.svg" alt="PlayPlex">
             </a>
-        </div>
-
-
     </header>
 </div>
 
-<div class="container-fluid px-lg-5">
-    <nav>
-        <a href="profile-library.html" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-            <img class=" " height="40px" src="media/icons/line-md--compass-loop.svg" alt="Discover">
-            <p>Discover</p>
-        </a>
-    </nav>
-    <main>
-        <h1 class="col-lg-6">Welcome to PlayPlex: Your Gateway to Infinite Adventures!</h1>
-    </main>
-</div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+
 <script src="main.js"></script>
 </body>
 </html>
