--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PlayPlex</title>
-    <link rel="icon" type="image/x-icon" href="media/pp-logo.svg">
+    <link rel="icon" type="image/x-icon" href="media/logos/pp-logo-icon-dark.svg">
 
     <link href="css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -14,36 +14,29 @@
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<div class="container-fluid login-bg min-vh-100">
-    <div class="row min-vh-100 align-content-center">
-        <div class="col-lg">
-            <figure class="mb-md-5">
-                <img class="" src="media/logos/pp-logo-icon-light.svg" alt="Image">
+<div class="container-fluid login-bg min-vh-100  gx-0">
+    <div class="row min-vh-100 gx-0">
+        <div class="col-lg align-content-center">
+            <figure class="">
+                <img class="h-25 w-25" src="media/logos/pp-logo-icon-light.svg" alt="Image">
             </figure>
         </div>
-        <div class="col-lg align-content-center mt-md-5 mt-sm-5">
-
-            <a class="login-link" href="profile-library.html">
-                <div class="row justify-content-center">
-                    <h3 class="col align-content-center text-end px-0">Log in</h3>
+        <div class="col-lg align-content-center bg-white">
+                <a class="row justify-content-center login-link-hover  pulse" href="profile-library.html">
+                    <h3 class="col align-content-center text-end px-0 text-primary">Log in</h3>
                     <div class="col px-0">
-                        <img class="float-start" src="media/icons/login-half-circle-line.svg"></img>
+                        <img class="float-start" src="media/icons/login-half-circle-line.svg" alt="login">
                     </div>
-
-                </div>
-            </a>
+                </a>
         </div>
     </div>
 
 
 </div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 <script src="main.js"></script>
 </body>
 </html>
