--- a/profile-library.html
+++ b/profile-library.html
@@ -17,24 +17,18 @@
 <body>
 
 <div class="container-fluid px-lg-5">
+    <header class="row align-items-center justify-content-between gx-0">
+        <a href="login.html" class="col text-start link-body-emphasis text-decoration-none ">
+            <img class="d-flex " height="40px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
+        </a>
 
-    <header class="d-flex align-content-center justify-content-lg-between">
+        <a href="profile-library.html" class="col text-center link-body-emphasis text-decoration-none">
+            <img class="" height="64px" src="media/logos/pp-logo-dark.svg" alt="PlayPlex">
+        </a>
 
-        <div class="d-flex align-content-center justify-content-lg-between flex-fill">
-            <a href="index.html" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-                <img class=" " height="40px" src="media/icons/line-md--arrow-align-left.svg " alt="playplex">
-            </a>
-
-            <a href="profile-library.html" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-                <img class=" " height="64px" src="media/logos/pp-logo-dark.svg" alt="playplex">
-            </a>
-
-            <a href="account.html" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-                <img class=" " height="40px" src="media/icons/line-md--account.svg" alt="playplex">
-            </a>
-        </div>
-
-
+        <a href="account.html" class="col text-end link-body-emphasis text-decoration-none">
+            <img class="" height="40px" src="media/icons/line-md--account.svg" alt="PlayPlex">
+        </a>
     </header>
 </div>
 
@@ -59,8 +53,8 @@
 
         </nav>
         <div class="col-sm ">
-            <main class="d-flex flex-column p-10  h-100 justify-content-center">
-                <h1 class="titan-one-regular h1 text-uppercase lh-md text-lg-start">Welcome to PlayPlex: Your Gateway to Infinite
+            <main class="p-10 ">
+                <h1 class="lh-md text-start">Welcome to <span class="titan-one-regular text-uppercase">PlayPlex</span> : Your Gateway to Infinite
                     Adventures!</h1>
 <!--                <p class="display-4 flex-fill">Roll the dice!</p>-->
             </main>
@@ -81,9 +75,7 @@
     </p>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+
 <script src="main.js"></script>
 </body>
 </html>
