Update header links to point to homepage

--- a/account.html
+++ b/account.html
@@ -18,7 +18,7 @@
 
 <div class="container-fluid px-lg-5">
     <header class="row align-items-center justify-content-between gx-0">
-            <a href="login.html" class="col text-start link-body-emphasis text-decoration-none ">
+            <a href="index.html" class="col text-start link-body-emphasis text-decoration-none ">
                 <img class="d-flex " height="40px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
             </a>
 
