--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 <body>
 
-<div class="container-fluid login-bg min-vh-100  gx-0">
+<div class="container-fluid login-bg min-vh-100 gx-0">
     <div class="row min-vh-100 gx-0">
         <div class="col-lg align-content-center">
             <figure class="">
                 <img class="h-25 w-25" src="media/logos/pp-logo-icon-light.svg" alt="Image">
             </figure>
         </div>
-        <div class="col-lg align-content-center bg-white">
+        <div class="col-lg align-content-center">
                 <a class="row justify-content-center login-link-hover  pulse" href="profile-library.html">
-                    <h3 class="col align-content-center text-end px-0 text-primary">Log in</h3>
+                    <h3 class="col align-content-center text-end px-0">Log in</h3>
                     <div class="col px-0">
                         <img class="float-start" src="media/icons/login-half-circle-line.svg" alt="login">
                     </div>
