Update header links to point to homepage

--- a/index.html
+++ b/index.html
@@ -16,25 +16,22 @@
 </head>
 
 <body>
-
-<div class="container-fluid login-bg min-vh-100 gx-0">
-    <div class="row min-vh-100 gx-0">
-        <div class="col-lg align-content-center">
-            <figure class="">
-                <img class="h-25 w-25" src="media/logos/pp-logo-icon-light.svg" alt="Image">
-            </figure>
+<div class="container-fluid login-bg vh-100 vw-100 gx-0 align-content-center">
+        <div class=" d-md-block d-lg-block d-xl-block">
+            <div class="row h-100 gx-0 align-content-center ">
+                <div class="col-md align-content-center mb-4">
+                    <img class="" src="media/logos/pp-logo-icon-light.svg" alt="Image">
+                </div>
+                <div class="col-lg align-content-center">
+                    <a class="row justify-content-center login-link-hover  pulse" href="profile-library.html">
+                        <h3 class="col align-content-center text-end px-0 ">Log in</h3>
+                        <div class="col px-0">
+                            <img class="float-start ms-4" src="media/icons/login-half-circle-line.svg" alt="login">
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="col-lg align-content-center">
-                <a class="row justify-content-center login-link-hover  pulse" href="profile-library.html">
-                    <h3 class="col align-content-center text-end px-0">Log in</h3>
-                    <div class="col px-0">
-                        <img class="float-start" src="media/icons/login-half-circle-line.svg" alt="login">
-                    </div>
-                </a>
-        </div>
-    </div>
-
-
 </div>
 
 <script src="main.js"></script>
