Refactor HTML, CSS and enhance overall site accessibility
This commit refactors the HTML and CSS code to improve website functionality, readability, and overall site accessibility. Various modifications were made, particularly to div classes, image dimensions, and element hierarchy. This helps create a more user-friendly, responsive, and accessible interface. Furthermore, code dependencies were added to the package.json and an implementation for loading card data was included in main.js. Lastly, SVG icons were resized for improved visual experience.

--- a/account.html
+++ b/account.html
@@ -14,25 +14,23 @@
           rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body   >
+<body>
 
-<div class="container-fluid px-lg-5">
+<div class="container-fluid">
     <header class="row align-items-center justify-content-between gx-0">
-            <a href="index.html" class="col text-start link-body-emphasis text-decoration-none ">
-                <img class="d-flex " height="40px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
-            </a>
+        <a href="index.html" class="col text-start link-body-emphasis text-decoration-none ">
+            <img class="d-inline-flex " height="30px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
+        </a>
 
-            <a href="profile-library.html" class="col text-center link-body-emphasis text-decoration-none">
-                <img class="" height="64px" src="media/logos/pp-logo-dark.svg" alt="PlayPlex">
-            </a>
+        <a href="profile-library.html" class="col text-center link-body-emphasis text-decoration-none">
+            <img class="" height="40px" src="media/logos/pp-logo-dark.svg" alt="PlayPlex">
+        </a>
 
-            <a href="account.html" class="col text-end link-body-emphasis text-decoration-none">
-                <img class="" height="40px" src="media/icons/line-md--account.svg" alt="PlayPlex">
-            </a>
+        <a href="account.html" class="col text-end link-body-emphasis text-decoration-none">
+            <img class="d-inline-flex" height="30px" src="media/icons/line-md--account.svg" alt="PlayPlex">
+        </a>
     </header>
 </div>
-
-
 
 
 <script src="main.js"></script>
