--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <img class="" src="media/logos/pp-logo-icon-light.svg" alt="Image">
                 </div>
                 <div class="col-lg align-content-center">
-                    <a class="row justify-content-center login-link-hover  pulse" href="profile-library.html">
-                        <h3 class="col align-content-center text-end px-0 ">Log in</h3>
-                        <div class="col px-0">
-                            <img class="float-start ms-4" src="media/icons/login-half-circle-line.svg" alt="login">
+                    <a class="btn btn-lg btn-login row align-content-center" href="profile-library.html">
+                        <div class="">Log in</div>
+                        <div class="">
+                            <img class="" src="media/icons/login-half-circle-line.svg" alt="login" height="30">
                         </div>
                     </a>
                 </div>
