--- a/library.html
+++ b/library.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>PlayPlex</title>
     <link rel="icon" type="image/x-icon" href="media/logos/pp-logo-icon-dark.svg">
 
@@ -16,23 +16,29 @@
 </head>
 <body>
 
-<div class="container-fluid px-lg-5">
+<div class="container-fluid">
     <header class="row align-items-center justify-content-between gx-0">
         <a href="index.html" class="col text-start link-body-emphasis text-decoration-none ">
-            <img class="d-flex " height="40px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
+            <img class="d-inline-flex " height="30px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
         </a>
 
         <a href="profile-library.html" class="col text-center link-body-emphasis text-decoration-none">
-            <img class="" height="64px" src="media/logos/pp-logo-dark.svg" alt="PlayPlex">
+            <img class="" height="40px" src="media/logos/pp-logo-dark.svg" alt="PlayPlex">
         </a>
 
         <a href="account.html" class="col text-end link-body-emphasis text-decoration-none">
-            <img class="" height="40px" src="media/icons/line-md--account.svg" alt="PlayPlex">
+            <img class="d-inline-flex" height="30px" src="media/icons/line-md--account.svg" alt="PlayPlex">
         </a>
     </header>
 </div>
 
+<div class="container-fluid">
+    <div class="card" id="cardItem">
+
+    </div>
+</div>
 
 <script src="main.js"></script>
 </body>
+
 </html>
