--- a/profile-library.html
+++ b/profile-library.html
@@ -16,18 +16,18 @@
 </head>
 <body>
 
-<div class="container-fluid px-lg-5">
+<div class="container-fluid">
     <header class="row align-items-center justify-content-between gx-0">
         <a href="index.html" class="col text-start link-body-emphasis text-decoration-none ">
-            <img class="d-flex " height="40px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
+            <img class="d-inline-flex " height="30px" src="media/icons/line-md--arrow-align-left.svg " alt="PlayPlex">
         </a>
 
         <a href="profile-library.html" class="col text-center link-body-emphasis text-decoration-none">
-            <img class="" height="64px" src="media/logos/pp-logo-dark.svg" alt="PlayPlex">
+            <img class="" height="40px" src="media/logos/pp-logo-dark.svg" alt="PlayPlex">
         </a>
 
         <a href="account.html" class="col text-end link-body-emphasis text-decoration-none">
-            <img class="" height="40px" src="media/icons/line-md--account.svg" alt="PlayPlex">
+            <img class="d-inline-flex" height="30px" src="media/icons/line-md--account.svg" alt="PlayPlex">
         </a>
     </header>
 </div>
@@ -54,9 +54,10 @@
         </nav>
         <div class="col-sm ">
             <main class="p-10 ">
-                <h1 class="lh-md text-start">Welcome to <span class="titan-one-regular text-uppercase">PlayPlex</span> : Your Gateway to Infinite
+                <h1 class="lh-md text-start text-truncate">Welcome to <span class="titan-one-regular text-uppercase">PlayPlex</span>
+                    : Your Gateway to Infinite
                     Adventures!</h1>
-<!--                <p class="display-4 flex-fill">Roll the dice!</p>-->
+                <!--                <p class="display-4 flex-fill">Roll the dice!</p>-->
             </main>
         </div>
     </div>
